--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+chinachu (20140301-1ppa2) saucy; urgency=low
+
+  * ppa2 release
+
+ -- soburi <soburi@gmail.com>  Sun, 16 Mar 2014 15:29:22 +0900
+
 chinachu (20140301-1ppa1) saucy; urgency=low
 
   * ppa1 release.
