update debianize patch for 20140330.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+chinachu (20140330-1ppa1) saucy; urgency=low
+
+  * 20140330-1ppa1 release
+
+ --  soburi <soburi@gmail.com>  Wed, 02 Apr 2014 00:35:31 +0900
+
 chinachu (20140301-1ppa2) saucy; urgency=low
 
   * ppa2 release
