--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+chinachu (20140403-1ppa1) saucy; urgency=low
+
+  * 20140403-1ppa1 release
+
+ --  soburi <soburi@gmail.com>  Sat, 05 Apr 2014 12:23:38 +0900
+
 chinachu (20140330-1ppa1) saucy; urgency=low
 
   * 20140330-1ppa1 release
