--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+chinachu (20140530-1ppa1) trusty; urgency=medium
+
+  * 20140530-1ppa1 release
+
+ -- soburi <soburi@gmail.com>  Sat, 31 May 2014 11:17:32 +0900
+
 chinachu (20140517-1ppa1) trusty; urgency=low
 
   * 20140517-1ppa1 release
