--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+chinachu (20140530-1ppa2) trusty; urgency=medium
+
+  * 20140530-1ppa2 release
+  * Discard ./chinachu path modification.
+  * Put log int /var/log/chinachu.
+  * Discard local modifications to logging.
+  * Disabling 'chinachu service' sub-command.
+  * /usr/bin/nodejs link to /var/lib/chinachu/usr/bin/node.
+  * Make fit to  Debian's folder configuration.
+  * Correcting postrm completely remove folder.
+  * Correct License short name field.
+
+ -- soburi <soburi@gmail.com>  Sat, 07 Jun 2014 22:14:08 +0900
+
 chinachu (20140530-1ppa1) trusty; urgency=medium
 
   * 20140530-1ppa1 release
