--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+chinachu (20140530-1ppa3) trusty; urgency=medium
+
+  * 20140530-1ppa3 release
+  * Correct fails on clean install and purge.
+
+ -- soburi <soburi@gmail.com>  Sun, 08 Jun 2014 12:09:31 +0900
+
 chinachu (20140530-1ppa2) trusty; urgency=medium
 
   * 20140530-1ppa2 release
